--- a/webui/files/index.html
+++ b/webui/files/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>DockerCoin Miner WebUI</title>
+<title>Group 5's Ramcoin Miner</title>
 <link rel="stylesheet" type="text/css" href="rickshaw.min.css">
 <style>
 #graph {
@@ -80,8 +80,8 @@ function refresh () {
             graph = new Rickshaw.Graph({
                 renderer: "area",
                 stroke: true,
-                width: 800,
-                height: 400,
+                width: 1500,
+                height: 750,
                 element: $("#graph")[0],
                 preserve: true,
                 series: [
